manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82107247
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82107247
  template:
    metadata:
      labels:
        app: 82107247
    spec:
      containers:
        - name: 82107247
          image: cepgstapacr.azurecr.io/82107247
          ports:
          - containerPort: 8080
