manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: svc-82107247
spec:
    ports:
    - port: 8080
    selector:
        app: "82107247"
