manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 82107247-ingress
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 82107247.ce-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: svc-82107247
            port:
              number: 8080
        pathType: Prefix
